# houselab

./: .gitignore  Cargo.toml
core/: Cargo.toml
core/src/: inspection.rs  lib.rs  person.rs  template.rs  test.rs
dioxus/: .gitignore  Cargo.toml  Dioxus.toml
dioxus/assets/: tailwind.css
dioxus/assets/styling/: main.css
dioxus/src/: main.rs
dioxus/src/components/: mod.rs  sidebar.rs  workspace.rs
dioxus/src/components/workspace/: info.rs  section.rs
egui/: Cargo.toml  ROADMAP.md
egui/src/: inspection.rs  interp.rs  lib.rs  main.rs  manage.rs  people.rs  sidebar.rs  style.rs  test.rs
