[package]
name = "houselab-egui"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
egui = "0.34.2"
egui_extras = { version = "0.34.2", features = ["file", "gif", "image", "webp", "datepicker", "jiff", "document-features"], default-features = false }
houselab_core = { path = "../core" }
image = "0.25.10"
jiff = "0.2.24"
log = "0.4.29"

[target.'cfg(not(target_os = "android"))'.dependencies]
eframe = "0.34.2"
env_logger = { version = "0.11.10", features = ["auto-color", "humantime"] }


[target.'cfg(target_os = "android")'.dependencies.eframe]
version = "0.34.2"
default-features = false
features = [
  "default_fonts",
  "glow",
  "android-native-activity",
]

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.1"
winit = { version = "0.30.13", default-features = false }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.android]
build_targets = ["armv7-linux-androideabi", "aarch64-linux-android"]

[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 35
